--- a/positioning_fun/css/main.css
+++ b/positioning_fun/css/main.css
@@ -52,19 +52,26 @@ img {
 .overlay-wrapper {
   width: 450px;
   margin: 100px auto 50px;
-}
+  position: relative;
+}  
 
 /* Absolute */
 .overlay {
   width: 450px;
   height: 300px;
   background-color: rgba(0, 0, 0, .3);
-}
+  position: absolute;
+  top: 0;}
 
 /* Fixed */
 header {
   background-color: #ccc;
   border-bottom: 2px solid #bbb;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 
 
